trunk/Archive2/3f/d09d21e8adfe72/output
main.cpp: In function 'int main()':
main.cpp:7:10: error: use of deleted function 'void foo(const int&)'
     foo(i);
          ^
main.cpp:2:6: note: declared here
 void foo(int const&) = delete;
      ^
