trunk/Archive2/3f/d09d21e8adfe72/main.cpp
void foo(int&) {}
void foo(int const&) = delete;

int main()
{
    int const i {};
    foo(i);
}
